--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <hibernate-version>5.0.1.Final</hibernate-version>
         <jsp.version>2.2.1-b03</jsp.version>
         <servlet.version>4.0.1</servlet.version>
+        <jpa.version>2.6.4</jpa.version>
 
 
     </properties>
@@ -51,25 +52,12 @@
             <version>5.3.18</version>
         </dependency>
 
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>${servlet.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.servlet.jsp</groupId>
-            <artifactId>jsp-api</artifactId>
-            <version>${jsp.version}</version>
-            <scope>provided</scope>
-        </dependency>
 
         <!--driver for connection to MYSql database -->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.34</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.3.3</version>
         </dependency>
 
         <!-- Hibernate -->
@@ -87,18 +75,13 @@
             <version>${hibernate-version}</version>
         </dependency>
 
-           <!-- for JPA from spring.io -->
-         <dependency>
-             <groupId>org.springframework.boot</groupId>
-             <artifactId>spring-boot-starter-data-jpa</artifactId>
-             <version>2.6.7</version>
-         </dependency>
+       <!-- for JPA from spring.io -->
+       <dependency>
+           <groupId>org.springframework.data</groupId>
+           <artifactId>spring-data-jpa</artifactId>
+           <version>${jpa.version}</version>
+       </dependency>
 
-         <dependency>
-             <groupId>org.hsqldb</groupId>
-             <artifactId>hsqldb</artifactId>
-             <version>2.6.1</version>
-         </dependency>
 
       </dependencies>
 
