images are closer, but not still works

--- a/src/main/webapp/WEB-INF/application.properties
+++ b/src/main/webapp/WEB-INF/application.properties
@@ -8,3 +8,6 @@ maximumPoolSize=20
 hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
 hibernate.hbm2ddl.auto=update
 hibernate.show_sql=false
+
+# ????? ???????? ???????????
+spring.datasource.hikari.auto-commit=false
