--- a/ex01/Cinema/pom.xml
+++ b/ex01/Cinema/pom.xml
@@ -47,6 +47,18 @@
             <version>5.3.20</version>
         </dependency>
 
+        <!-- Object to json mapping -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.13.3</version>
+        </dependency>
+
         <!-- Database connection -->
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -89,6 +101,11 @@
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
             <version>2.3.31</version>
+        </dependency>
+        <dependency>
+            <groupId>no.api.freemarker</groupId>
+            <artifactId>freemarker-java8</artifactId>
+            <version>2.0.0</version>
         </dependency>
 
         <!-- Tools -->
