--- a/ex02/Cinema/pom.xml
+++ b/ex02/Cinema/pom.xml
@@ -108,6 +108,14 @@
             <version>2.0.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-websocket -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-websocket</artifactId>
+            <version>5.3.20</version>
+        </dependency>
+
+
         <!-- Tools -->
         <dependency>
             <groupId>org.slf4j</groupId>
