--- a/ex02/Cinema/pom.xml
+++ b/ex02/Cinema/pom.xml
@@ -147,6 +147,27 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.4</version>
         </dependency>
+<!--        MessageMapping-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>webjars-locator-core</artifactId>
+            <version>0.50</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>sockjs-client</artifactId>
+            <version>1.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>stomp-websocket</artifactId>
+            <version>2.3.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.1.1-1</version>
+        </dependency>
     </dependencies>
 
     <build>
