--- a/ex02/Cinema/pom.xml
+++ b/ex02/Cinema/pom.xml
@@ -168,6 +168,13 @@
             <artifactId>jquery</artifactId>
             <version>3.1.1-1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-messaging -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-messaging</artifactId>
+            <version>5.3.20</version>
+        </dependency>
+
     </dependencies>
 
     <build>
